# data-extractor-eunxt

./: .gitignore  Euronext_Equities_with_MIC.csv  README.md  json_to_csv_converter.py  pyproject.toml
src/: euronext_scraper.py  sector_extractor.py
