[tool.poetry]
name = "euronext-esg-scraper"
version = "1.0.0"
description = "ESG data scraper for Euronext companies"
authors = ["Tito Barros Sala <titobsala@exo-team.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
brotli = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
euronext-scraper = "src.euronext_scraper:main"
